--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "universal-repo-config",
-  "version": "1.0.8",
+  "version": "1.0.17",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -8,14 +8,25 @@
     "postinstall": "node ./scripts/install.js"
   },
   "dependencies": {
-    "babel-eslint": "10.0.1",
-    "eslint": "5.15.3",
+    "@typescript-eslint/eslint-plugin": "^1.11.0",
+    "@typescript-eslint/parser": "^1.11.0",
+    "@vue/cli-plugin-babel": "^3.9.0",
+    "@vue/cli-plugin-eslint": "^3.9.0",
+    "@vue/cli-plugin-typescript": "^3.9.0",
+    "@vue/cli-service": "^3.9.0",
+    "@vue/eslint-config-prettier": "^4.0.1",
+    "@vue/eslint-config-typescript": "^4.0.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.2.0",
     "eslint-config-prettier": "4.1.0",
     "eslint-plugin-prettier": "3.0.1",
-    "prettier": "1.16.4",
+    "eslint-plugin-vue": "^5.0.0",
+    "prettier": "^1.18.2",
     "stylelint": "9.10.1",
     "stylelint-config-standard": "18.2.0",
-    "stylelint-order": "2.1.0"
+    "stylelint-order": "2.1.0",
+    "typescript": "^3.4.3"
   },
   "author": "",
   "license": "ISC"
