--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-config-prettier": "4.1.0",
+    "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-prettier": "3.0.1",
     "eslint-plugin-vue": "^5.0.0",
     "prettier": "^1.18.2",
