--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "stylelint": "9.10.1",
     "stylelint-config-standard": "18.2.0",
     "stylelint-order": "2.1.0",
+    "stylelint-prettier": "^1.1.1",
     "typescript": "^3.4.3"
   },
   "author": "",
