--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-prettier": "3.0.1",
     "eslint-plugin-vue": "^5.0.0",
+    "inquirer": "^6.5.2",
     "prettier": "^1.18.2",
     "stylelint": "9.10.1",
     "stylelint-config-standard": "18.2.0",
