--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "universal-repo-config",
   "version": "1.0.26",
   "description": "",
-  "main": "index.js",
+  "bin": "./scripts/install.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "node ./scripts/install.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^1.11.0",
