--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "universal-repo-config",
-  "version": "1.0.26",
+  "version": "1.0.27-alpha.0",
   "description": "",
-  "bin": "./scripts/install.js",
+  "bin": {
+    "universal-repo-config": "scripts/install.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
