--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.27-alpha.1",
   "description": "",
   "scripts": {
-    "postinstall": "./install.js",
+    "postinstall": ".scripts/install.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
