--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "universal-repo-config",
   "version": "1.0.27-alpha.6",
   "description": "",
+  "bin": "./scripts/install.js",
   "scripts": {
     "postinstall": "node ./scripts/install.js",
     "test": "echo \"Error: no test specified\" && exit 1"
