--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "universal-repo-config",
   "version": "1.0.27-alpha.7",
   "description": "",
-  "bin": {
-    "universal-repo-config": "scripts/install.js"
-  },
+  "bin":"scripts/install.js",
   "scripts": {
     "postinstall": "node ./scripts/install.js",
     "test": "echo \"Error: no test specified\" && exit 1"
