--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "universal-repo-config",
-  "version": "1.0.27-alpha.15",
+  "version": "1.0.27-alpha.16",
   "description": "",
   "bin": {
-    "universal-repo-config": "scripts/install.js"
+    "universal-repo-config": "./scripts/install.js"
   },
   "scripts": {
     "postinstall": "node ./scripts/install.js",
